<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mrpeny.onedayofhappiness.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleMarginStart="20dp"
            app:expandedTitleTextAppearance="@style/collapsedToolbarStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Cover picture in Collapsing Toolbar -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_layout_height"
                android:contentDescription="@string/content_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/cover"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Card: About the piece -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_upper"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/linearlayout_padding">

                    <TextView
                        style="@style/CardViewTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/about_the_piece" />

                    <TextView
                        style="@style/CardViewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/story" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Card: More information -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_lower"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/linearlayout_padding">

                    <TextView
                        style="@style/CardViewTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/more_information" />

                    <TextView
                        style="@style/CardViewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:drawableLeft="@drawable/ic_website"
                        android:drawableStart="@drawable/ic_website"
                        android:text="@string/website" />

                    <TextView
                        style="@style/CardViewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawableStart="@drawable/ic_phone"
                        android:text="@string/phone" />

                    <TextView
                        style="@style/CardViewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawableStart="@drawable/ic_email"
                        android:text="@string/email" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="buyTicket"
                android:text="@string/buy_a_ticket" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
